# car-vision-project

./: .gitignore  README.md  init_repo.ps1  pyproject.toml
car_vision_project/: .env.example  Dockerfile  README.md  __init__.py  config.py  requirements.txt  train.py
car_vision_project/api/: main.py
car_vision_project/artifacts/: classes.txt
car_vision_project/data/: dataset.py
car_vision_project/models/: car_classifier.py
car_vision_project/scripts/: auto_scraper.py
car_vision_project/services/: __init__.py  feature_service.py  valuation_service.py
car_vision_project/templates/: index.html
car_vision_project/tests/: test_api.py
car_vision_project/utils/: image_transforms.py
