[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-vision-project"
version = "0.1.0"
description = "Production-ready car image recognition and valuation API."
readme = "car_vision_project/README.md"
requires-python = ">=3.11"
authors = [
    { name = "Car Vision Team" }
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "jinja2==3.1.5",
    "python-multipart==0.0.20",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-dotenv==1.0.1",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "numpy==2.2.1",
    "pillow==11.1.0",
    "scikit-learn==1.6.0",
    "tqdm==4.67.1",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "icrawler==0.6.10",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "httpx==0.28.1",
    "ruff==0.8.4",
    "mypy==1.14.1",
]

[project.urls]
Homepage = "https://example.com/car-vision-project"

[tool.setuptools.packages.find]
include = ["car_vision_project*"]
exclude = ["car_vision_project.tests*"]

[tool.pytest.ini_options]
testpaths = ["car_vision_project/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
